[gd_scene load_steps=3 format=2]

[ext_resource path="res://Environment/Gate.gd" type="Script" id=1]

[sub_resource type="Animation" id=3]
resource_name = "Unlock"

[node name="Gate" type="StaticBody2D"]
collision_layer = 9
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PlayerInteract" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteract"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Unlock = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="PlayerInteract" to="." method="_on_PlayerInteract_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
